set up basic configuration in pom and update the spring version as well as java version